Task-04: Modal alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ body {
 }
 
 #result {
-  position: fixed;
-  top: 10%;
-  left: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   height: 250px;
   width: 400px;
@@ -74,6 +74,7 @@ body {
   text-align: center;
   padding: 2rem;
 }
+
 
 #show-time {
   text-align: center;
